# gastrobot

./: .gitignore  frames_2026-04-06_13.49.25.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gastrobot_bringup/share/gastrobot_bringup/: package.bash  (+5 more)
log/: latest_build
src/gastrobot_bringup/: setup.cfg  setup.py
src/gastrobot_bringup/config/: ekf.yaml  joystick.yaml  slam_params.yaml  twist_mux.yaml
src/gastrobot_bringup/launch/: bringup.launch.py  bringup.launch.py.bak  nav2.launch.py  robot.launch.py  slam.launch.py  test.launch.py  ultrasonic_tf.launch.py
src/gastrobot_bringup/maps/: house.pgm  house.yaml
src/gastrobot_bringup/urdf/: gastrobot.urdf  gastrobot.urdf.bak
src/gastrobot_control/: package.xml  setup.cfg  setup.py
src/gastrobot_control/config/: ekf.yaml
src/gastrobot_control/gastrobot_control/: diff_drive_controller.py  esp32_bridge_node.py  heading_hold_node.py  joystick_control_node.py  lift_node  lift_node.py  pid_test_node.py  ui_node.py  wheel_odometry_node.py  wheel_odometry_node_backup.py
src/gastrobot_gui/: package.xml  setup.cfg  setup.py
src/gastrobot_gui/gastrobot_gui/: gui_node.py
src/gastrobot_imu/: package.xml  setup.cfg  setup.py
src/gastrobot_imu/gastrobot_imu/: bno08x_node.py  bno08x_uart_node.py  yaw_correction_node.py
src/gastrobot_navigation/: package.xml  setup.cfg  setup.py
src/gastrobot_navigation/gastrobot_navigation/: mission_manager_node.py
src/gastrobot_perception/: package.xml  setup.cfg  setup.py
src/gastrobot_perception/gastrobot_perception/: ultrasonic_node.py
(+83 files in other folders)
