<package format="3">
  <name>gastrobot_imu</name>
  <version>0.0.0</version>
  <description>BNO08X IMU Node</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
